--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,19 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.h2database', name: 'h2', version: '1.4.199'
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.7.2'
+
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 }
 
-mainClassName = 'windows.MainWindow.Main'
+jar {
+    manifest {
+        attributes "Main-Class": "Main"
+    }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
+mainClassName = 'Main'
