--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,8 +2,8 @@ host = jdbc:sqlite:/Users/zzoomm/Desktop/Git/Java/SeasGradleJavaFX/db/test.db
 user = sa
 pass = null
 storageType = databaseSQLite
+siteParse = null
 
 #host = jdbc:h2:tcp://localhost/~/Auth
 #user = sa
 #pass = null
-# database/file
