--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,7 +2,7 @@ host = jdbc:sqlite:/Users/zzoomm/Desktop/Git/Java/SeasGradleJavaFX/db/test.db
 user = sa
 pass = null
 storageType = databaseSQLite
-siteParse = null
+siteParse = https://geo.koltyrin.ru/morja.php
 
 #host = jdbc:h2:tcp://localhost/~/Auth
 #user = sa
