--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 host = jdbc:sqlite:/Users/zzoomm/Desktop/Git/Java/SeasGradleJavaFX/db/test.db
 user = sa
-pass = null
+pass = 123
 storageType = databaseSQLite
 siteParse = https://geo.koltyrin.ru/morja.php
 
